--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 /* This makes the site always in dark mode */
 body { 
   background-color: black; 
@@ -10,4 +14,8 @@ body a {
 }
 body a:hover {
   color: LightGrey;
+}
+
+#footer-content {
+  background-color: SteelBlue;
 }
