--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1,7 +1,3 @@
-html, body {
-    height: 100%;
-}
-
 /* This makes the site always in dark mode */
 body { 
   background-color: black; 
@@ -18,4 +14,12 @@ body a:hover {
 
 footer {
   color: DarkGrey;
+}
+
+/* Link Coloring in the footer */
+footer a {
+    color: SteelBlue;    
+}
+footer a:hover {
+    color: DarkGrey;
 }
